--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
       </p>
     </div>
     <div class="rss">
-      <a href="http://feeds.feedburner.com/vincent-wang">
+      <a href="http://feeds.feedburner.com/linsong">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
