add sidebar and css tweak

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,10 @@
 <div class="site">
   <div class="title">
     <a href="/">Vincent Wang</a>
-    <a class="extra" href="/">home</a>
+    <a class="extra" target="blank" href="/">Home</a>
+    <a class="extra" target="blank" href="http://twitter.com/linsong">Twitter</a>
+    <a class="extra" target="blank" href="http://github.com/linsong">GitHub</a>
+    <a class="extra" target="blank" href="http://feeds.feedburner.com/linsong">RSS</a>
   </div>
   
   {{ content }}
