--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h2>{{ page.title | upcase }}</h2>
+<h2 class="uppercase">{{ page.title }}</h2>
 
 <div id="post">
 {{ content }}
